--- a/assets/scss/pages/products/enterprise-core.scss
+++ b/assets/scss/pages/products/enterprise-core.scss
@@ -40,7 +40,7 @@
   }
 
   .top {
-    margin-top: -140px;
+    margin-top: -148px;
     padding-top: 260px;
     padding-bottom: 180px;
     background: #182434;
